# nadag-python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  example_script.py  nadag.toml  pyproject.toml  zensical.toml
.github/workflows/: docs.yml  release.yml
docs/: 01_nadag_api_datamodel.md  02_codes_and_filters.md  03_backup.md  03_nadagdata_dataclass.md  04_api_audit.md  05_api_docs.md  13_backup.md  14_markdown.md  index.md
docs/examples/: 01_basic_fetch.ipynb
src/nadag_python/: __init__.py  api_audit.py  config.py  data_models.py  http_client.py  logging.py  nadag_functions.py  postprocessing.py  types.py  utils.py
