[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nadag_python"
version = "0.0.0"
description = "A Python client for fetching geotechnical soundings and samples from the NADAG API"
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
authors = [
  {name = "Cristian Godoy", email = "crgo@nve.no"}
]
dependencies = [
    "geopandas",
    "pandas",
    "shapely",
    "httpx",
    "loguru",
    "pydantic>=2.0",
    "pydantic-settings",
    "tenacity",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "jupyter", 
    "matplotlib",
    "zensical",
    "mkdocstrings-python",
  "ipykernel",
  "python-semantic-release>=10.5,<11",
  "rich",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ty.rules]
unused-ignore-comment = "warn"
redundant-cast = "ignore"
invalid-argument-type = "warn"
unresolved-import = "warn"
unresolved-attribute = "warn"
possibly-missing-attribute = "warn"
possibly-missing-import = "error"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.semantic_release]
allow_zero_version = true
major_on_zero = false
tag_format = "v{version}"
version_toml = ["pyproject.toml:project.version"]
commit_parser = "conventional"
commit_message = "chore(release): {version}"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
other_allowed_tags = ["build", "chore", "ci", "docs", "refactor", "style", "test"]
parse_squash_commits = true
ignore_merge_commits = true

[tool.semantic_release.changelog]
mode = "update"
exclude_commit_patterns = [
  '''chore\(release\): .+''',
  '''chore(?:\([^)]*?\))?: .+''',
  '''ci(?:\([^)]*?\))?: .+''',
  '''style(?:\([^)]*?\))?: .+''',
  '''test(?:\([^)]*?\))?: .+''',
  '''Initial [Cc]ommit.*''',
]

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
output_format = "md"
mask_initial_release = false
